--- a/style.css
+++ b/style.css
@@ -3,74 +3,138 @@
     padding: 0;
     box-sizing: border-box;
 }
-/* nav bar */
-header{
-    
+.container{
+    width: 100vw;
+    height: 100vh;
+    font-family: "Josefin Sans", sans-serif;
+    /* background-color: rgb(20, 19, 19); */
+    background-image: url(girl-the-darkness-black-shadow-wallpaper-preview.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+}
+.contains{
+    /* background-color: black; */
+    height: 70px;
     display: flex;
     justify-content: space-between;
-    height: 20vh;
     align-items: center;
-    padding: 15px;
-    height: 8vh;
-    
+    cursor: pointer;
 }
-/* .navbar::before{
-    content: "";
-    position: absolute;
-    background-color: rgba(red, green, blue, alpha);
-    height: 100%;
-    width: 100%;
-    z-index: -1; 
-}  */
+span{
+    color: white;
+}
+.logo{
+    font-family: "Great Vibes", cursive;
+    font-size: 40px;
+    font-weight: 400;
+    font-style: italic;
+}
 ul{
     display: flex;
     list-style: none;
 }
 li{
-    font-size:15px ;
-    margin-right: 24px;
+    overflow: hidden;
+}
+
+li a{
+    color: white;
+    font-size: 20px;
+    font-weight: 500;
+    margin-right: 50px;
+    text-decoration: none;
+    position: relative;
+    overflow: hidden;
+    cursor: pointer;
+}
+li a::after{
+    content: "";
+    width: 100%;
+    height: 10%;
+    background-color: yellow;
+    position: absolute;
+    bottom: 0;
+    left: -150px;
+    transition: all 0.3s ease-in-out;
+}
+li a:hover::after{
+    left: 0;
+}
+.orange{
+    color: yellow;
+}
+.contain{
+    display: flex;
+    align-items: last baseline;
+    
+    flex-direction: column;
+    margin: 300px;
+    justify-content: space-around; 
+}
+.salute{
+    color: white;
+    font-size: 30px;
+}
+.contacts{
+    width: 80vw;
+    height: 80vh;
+    /* background-color: grey; */
+    /* background-image: url(./bg1.jpg); */
+    margin-top: 1px;
+    margin-left: 150px;
+    border-radius: 20px;
+    opacity: 0.7;
+    font-family: "Josefin Sans", sans-serif;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    /* display: flex; */
 
 }
-.h1{
-    font-size: 100%;
-    font-style: italic;
-    justify-content: center;
-    height: 50px;
+.contac{
+    /* display: flex; */
+    align-items: center;
+    /* flex-direction: column; */
+    margin: 30px;
+}
+.abou{
+    width: 100vw;
+    height: 100vh;
+     /* background-color: grey; */ */ */
+    
+    margin-top: 1px;
+    /* margin-left: 150px; */
+    border-radius: 20px;
+    opacity: 0.7;
+    font-family: "Josefin Sans", sans-serif;
+    color: aliceblue;
+    
+    display: flex;
+    padding: 20px;
+    text-align: left; 
+    background-image: url(download.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    
+}
+.p{
+    font-size: 30px;
+    font-family: "Josefin Sans", sans-serif;
     color: white;
 }
-header ul li a{
-    padding: 5px 20px;
-    text-decoration: none;
-    color:purple ;
+button {
+    background-color: #4CAF50; 
+    border: none; 
+    color: white; 
+     padding: 5px 12px; Some padding 
+    text-align: center;
+    text-decoration: none; 
+    /* display: inline-block; Inline-block element */
+    font-size: 16px; /* Increase font size */
+    /* margin: 4px 2px; Some margin */
+    cursor: pointer; 
+    border-radius: 5px; 
 }
-header ul li a:hover{
-    border-bottom: 2px solid yellow;
-}
-.page1{
-    display: flex;
-    flex-direction: column;
-    height: 100vh;
-    justify-content: center;
-    align-items: center;
-    background-color: rgba(red, green, blue, alpha);
-    background-image:url( dark-circle-background-design-website-poster-corporate-identity-brochure-presentation-template-futuristic-geometric-background_206325-1645.jpg);
-    width: 100vw;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
 
-
-    
-}
-/* .home::before{
-    content: "";
-    
-    top: 0;
-    left: 0;
-    background: url(20619744.jpg);no repeat center center fixed;
-    background-size: cover;
-    height: 100vh;
-    width: 100%; */
-    
-
-}
